<resources>
    <string name="app_name">Movie_02</string>
    <string name="text_genres">Genres</string>
    <string name="text_home">Home</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_search">Tìm kiếm phim, nhân vật</string>
    <string name="text_list_favorite">Danh sách yêu thích</string>
    <string name="text_popular">popular</string>
    <string name="text_now_playing">now playing</string>
    <string name="text_upcoming">upcoming</string>
    <string name="text_top_rate">top rate</string>
    <string name="text_title">Title</string>
    <string name="text_release_date">Release Date</string>
    <string name="text_watch">Watch</string>
    <string name="text_rate">0.0</string>
    <string name="text_add_farvorite">Add Farvorite</string>
    <string name="text_review_film">Review</string>
</resources>
