<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/layout_appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_300">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/layout_collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/text_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_back_drop"
                    android:layout_width="@dimen/dp_250"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text_title"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginTop="@dimen/dp_10"
                        android:paddingLeft="@dimen/dp_20"
                        android:text="@string/text_title"
                        android:textColor="@color/color_while"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/text_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginTop="@dimen/dp_10"
                        android:drawableLeft="@drawable/ic_star_black_24dp"
                        android:paddingLeft="@dimen/dp_20"
                        android:text="@string/text_rate"
                        android:textColor="@color/color_while"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/text_date"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_30"
                        android:layout_marginTop="@dimen/dp_10"
                        android:paddingLeft="@dimen/dp_20"
                        android:text="@string/text_release_date"
                        android:textColor="@color/color_while"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/text_watch"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@color/color_while"
                        android:paddingLeft="@dimen/dp_4"
                        android:paddingRight="@dimen/dp_4"
                        android:text="@string/text_watch"
                        android:textColor="@color/color_gray"
                        android:textSize="@dimen/sp_20" />

                    <TextView
                        android:id="@+id/text_add_farvorite"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/dp_30"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/dp_10"
                        android:background="@color/color_while"
                        android:paddingLeft="@dimen/dp_4"
                        android:paddingRight="@dimen/dp_4"
                        android:text="@string/text_add_farvorite"
                        android:textColor="@color/color_gray"
                        android:textSize="@dimen/sp_20" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/text_review_film"
            android:textSize="@dimen/sp_20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/nested_scoll_view"/>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>